# agdel-skills

./: .gitignore  README.md
examples/signal-bot/: .env.example  README.md  proxy.py  pyproject.toml
examples/signal-bot/config/: defaults.yaml
examples/signal-bot/src/signal_bot/: __init__.py  __main__.py  agdel.py  config.py  crypto.py  main.py  publisher.py  signal.py  webhook.py
examples/trader-bot/: .env.example  README.md  agdel_buyer.py  dashboard.css  dashboard.html  hl_trader.py  matrix_engine.py  requirements.txt  server.py
examples/trader-bot/config/: trading.yaml
skills/agdel-buyer-integration/: SKILL.md
skills/agdel-buyer-integration/references/: evaluating-makers.md  mcp-tools-reference.md  protocol-rules.md
skills/agdel-maker-integration/: SKILL.md
skills/agdel-maker-integration/references/: mcp-tools-reference.md  protocol-rules.md  signal-scoring.md
